# INF1027-Teste-e-Medicao

./: .gitmodules  README.md
app_musica/: Album.java  Artista.java  Avaliacao.java  Musica.java  Playlist.java  Usuario.java
jump-king-tests/: .gitignore  pyproject.toml
jump-king-tests/tests/: AgenteTeste.py  ExploradorPlataforma.py  __init__.py  game_tester.py  plataforma_tester.py  practice_game.py  test_agente_teste.py  test_game_tester.py  test_headful_visual.py  test_mapeamento.py
