[tool.poetry]
name = "jump-king-tests"
version = "0.1.0"
description = "Automated tests for JumpKingAtHome"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
pygame = "^2.6.1"
numpy = "^2.0.0"
torch = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
